四张图片时显示为grid style时，变为2x2类似于QQ

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'com.jaeger.ninegridimageview:library:1.1.1'
+//    implementation 'com.jaeger.ninegridimageview:library:1.1.1'
+    implementation project(":library")
 }
 
