--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -27,7 +27,9 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-//    implementation 'com.jaeger.ninegridimageview:library:1.1.1'
     implementation project(":library")
+    implementation project(":imagepreview")
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
 }
 
