--- a/imagepreview/src/main/AndroidManifest.xml
+++ b/imagepreview/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true">
 
-        <activity android:name=".GPreviewActivity"/>
+        <activity android:name=".PreviewActivity"
+            android:theme="@style/myTransparent"/>
 
     </application>
 
